--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ matplotlib
 markdown2
 weasyprint
 tyro
+accelerate
+torchdata >= 0.8.0
+datasets >= 2.21.0
+tomli >= 1.1.0 ; python_version < "3.11"
