update config plus add dsv3 yaml

--- a/examples/megatron/configs/deepseek_v3-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v3-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: ${EXP_NAME:llama2_7B-pretrain}
+exp_name: ${EXP_NAME:deepseek_v3-pretrain}
 workspace: ./output
 
 modules:
@@ -9,26 +9,23 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: llama2_7B.yaml
+    model: ${PRIMUS_MODEL:deepseek_v3}.yaml
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
-      # disable_wandb: false
-      # disable_tensorboard: false
       stderr_sink_level: DEBUG
 
-      eval_iters: 0
-
+      # debug
+      moe_router_force_load_balancing: true
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
+      # hyber parameters
       train_iters: 50
-      micro_batch_size: 4
+      micro_batch_size: 1
       global_batch_size: 256
-
-      seq_length: 4096
-      max_position_embeddings: 4096
-
+      seq_length: ${PRIMUS_SEQ_LENGTH:4096}
+      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
       min_lr: 0.0
       lr_warmup_iters: 2
@@ -42,18 +39,29 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      tensor_model_parallel_size: 1
-      pipeline_model_parallel_size: 1
-      expert_model_parallel_size: 1
+      tensor_model_parallel_size: ${PRIMUS_TP:1}
+      pipeline_model_parallel_size: ${PRIMUS_PP:1}
+      expert_model_parallel_size: ${PRIMUS_EP:8}
       overlap_grad_reduce: true
       overlap_param_gather: true
-      gradient_accumulation_fusion: false
 
       # data
       mock_data: true
-      train_data_path: null
+      train_data_path: ${TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
+
+      # fusion
+      # 20250321: need latest megatron docker image
+      moe_permute_fusion: true
+      # fused wgrad gemm and accumulation
+      gradient_accumulation_fusion: false
+      # recommend set `false` in fp8
+      moe_use_legacy_grouped_gemm: true
+      # fused topk router with aux score
+      moe_use_fused_router_with_aux_score: false
+      # pad 192/128 for deepseek attention
+      fused_padded_mla_attention: false
 
       # ckpt
       finetune: false
@@ -67,9 +75,4 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
-
-      # use_torch_fsdp2: true
-      # use_distributed_optimizer: false
-      # overlap_param_gather: false
-      # ckpt_format: torch
-      # sequence_parallel: 1
+      eval_iters: 0
