update script and exp by wenx

--- a/examples/megatron/configs/deepseek_160B_proxy-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_160B_proxy-pretrain.yaml
@@ -43,6 +43,11 @@ modules:
       # recompute_method: block # uniform, block
       # recompute_num_layers: 0 # int
 
+      fp8: hybrid
+      moe_use_legacy_grouped_gemm: false
+      moe_shared_expert_overlap: true
+      overlap_moe_expert_parallel_comm: false
+
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
       pipeline_model_parallel_size: ${PRIMUS_PP:8}
@@ -63,7 +68,7 @@ modules:
       # fused wgrad gemm and accumulation
       gradient_accumulation_fusion: true
       # recommend set `false` in fp8
-      moe_use_legacy_grouped_gemm: true
+      # moe_use_legacy_grouped_gemm: true
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
       # pad 192/128 for deepseek attention
