--- a/primus/configs/modules/megatron/primus_turbo.yaml
+++ b/primus/configs/modules/megatron/primus_turbo.yaml
@@ -2,7 +2,7 @@
 enable_primus_turbo: false
 
 # feature control flags
-use_turbo_attention: true
+use_turbo_attention: false
 use_turbo_row_parallel_linear: false
 use_turbo_layer_norm_column_parallel_linear: false
 use_turbo_column_parallel_linear: false
@@ -11,4 +11,4 @@ use_turbo_grouped_mlp: false
 
 # inner features flags
 enable_turbo_attention_float8 : false
-enable_turbo_gemm_float8 : true
+enable_turbo_gemm_float8 : false
