--- a/examples/megatron/configs/deepseek_515B_2M-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_515B_2M-pretrain.yaml
@@ -1,6 +1,6 @@
-work_group: ${TEAM:amd}
-user_name: ${USER:root}
-exp_name: ${EXP_NAME:deepseek_160B_proxy-pretrain}
+work_group: ${PRIMUS_DATE:amd}
+user_name: ${PRIMUS_MODEL_NAME:root}
+exp_name: ${PRIMUS_EXP_NAME:deepseek_515B_2M_1f1b_overlap_debug}
 workspace: ./output
 
 modules:
@@ -9,7 +9,7 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: ${PRIMUS_MODEL:deepseek_160B_proxy}.yaml
+    model: ${PRIMUS_MODEL:deepseek_515B_2M}.yaml
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
@@ -20,10 +20,11 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
+
       # hyber parameters
       train_iters: 10
       micro_batch_size: 1
-      global_batch_size: 128
+      global_batch_size: 256
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
@@ -39,20 +40,41 @@ modules:
       norm_epsilon: 1.0e-6
 
       # recompute
-      # recompute_granularity: full # full, selective
-      # recompute_method: block # uniform, block
-      # recompute_num_layers: 0 # int
+      recompute_granularity: full # full, selective
+      recompute_method: null # uniform, block
+      recompute_num_layers: 0 # int
+      recompute_layer_ids: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27]
 
-      fp8: hybrid
-      moe_use_legacy_grouped_gemm: false
-      moe_shared_expert_overlap: true
+      # fp8: hybrid
+      moe_use_legacy_grouped_gemm: true
+      # moe_shared_expert_overlap: true
       overlap_moe_expert_parallel_comm: false
 
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
-      pipeline_model_parallel_size: ${PRIMUS_PP:8}
-      expert_model_parallel_size: ${PRIMUS_EP:8}
-      # num_virtual_stages_per_pipeline_rank: 4
+      pipeline_model_parallel_size: ${PRIMUS_PP:16}
+      expert_model_parallel_size: ${PRIMUS_EP:32}
+      # num_virtual_stages_per_pipeline_rank: 2
+
+      # use_precision_aware_optimizer: true
+      # main_params_dtype: fp16
+      # main_grads_dtype: bf16
+
+      # -----------------------for deepep
+      # use deepep
+      # moe_token_dispatcher_type: flex
+      # moe_shared_expert_overlap: false
+      # moe_enable_deepep: true
+      # moe_router_dtype: fp32
+      # moe_deepep_num_cus: 64
+
+      # -----------------------for turbo-aiter-fa, turbo-gg
+      # enable_primus_turbo: false
+      # use_turbo_attention: false
+      # use_turbo_grouped_mlp: true
+      # -----------------------for deepep
+
+
       overlap_grad_reduce: true
       overlap_param_gather: true
 
@@ -62,13 +84,18 @@ modules:
       valid_data_path: null
       test_data_path: null
 
+      profile: true
+      use_pytorch_profiler: true
+      profile_step_end: 7
+      profile_step_start: 6
+      profile_ranks: [511]
+
       # fusion
       # 20250321: need latest megatron docker image
       moe_permute_fusion: false
       # fused wgrad gemm and accumulation
       gradient_accumulation_fusion: true
       # recommend set `false` in fp8
-      # moe_use_legacy_grouped_gemm: true
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
       # pad 192/128 for deepseek attention
@@ -87,3 +114,7 @@ modules:
       disable_last_saving: true
       ckpt_format: torch
       eval_iters: 0
+
+
+      # moe_router_num_groups: 2 # int, node number
+      # moe_router_group_topk: 1
