--- a/examples/megatron/configs/deepseek_v2-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v2-pretrain.yaml
@@ -60,7 +60,7 @@ modules:
       # 20250321: need latest megatron docker image
       moe_permute_fusion: false
       # fused wgrad gemm and accumulation
-      gradient_accumulation_fusion: true
+      gradient_accumulation_fusion: false
       # recommend set `false` in fp8
       moe_use_legacy_grouped_gemm: true
       # fused topk router with aux score
