--- a/examples/megatron/configs/llama3.1_405B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_405B-pretrain.yaml
@@ -44,14 +44,14 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      tensor_model_parallel_size: 4
-      pipeline_model_parallel_size: 14
+      tensor_model_parallel_size: 8
+      pipeline_model_parallel_size: 8
       expert_model_parallel_size: 1
       context_parallel_size: 1
 
       # Each pp stage has 31 layers
-      #decoder_first_pipeline_num_layers: 30 # int
-      #decoder_last_pipeline_num_layers: 30 # int
+      decoder_first_pipeline_num_layers: 30 # int
+      decoder_last_pipeline_num_layers: 30 # int
       #num_layers_per_virtual_pipeline_stage: null # int
       #num_virtual_stages_per_pipeline_rank: null # int
 
