--- a/examples/torchtitan/configs/llama3_405b.toml
+++ b/examples/torchtitan/configs/llama3_405b.toml
@@ -36,16 +36,15 @@ seq_len = 8192
 max_norm = 1.0  # grad norm clipping
 steps = 3000
 compile = true
-dataset = "mock"
-#dataset = "c4"
+dataset = "c4"
 
 [parallelism]
 data_parallel_replicate_degree = 1
 data_parallel_shard_degree = -1
 tensor_parallel_degree = 8  # 8-way TP
 enable_async_tensor_parallel = true
-pipeline_parallel_degree = 6
-context_parallel_degree = 1
+pipeline_parallel_degree = 4
+context_parallel_degree = 2
 
 [checkpoint]
 enable_checkpoint = false
