Disable dist optimizer for fsdpv2

--- a/examples/megatron/configs/qwen2.5_72B-pretrain.yaml
+++ b/examples/megatron/configs/qwen2.5_72B-pretrain.yaml
@@ -44,9 +44,12 @@ modules:
       tensor_model_parallel_size: 1
       pipeline_model_parallel_size: 1
       expert_model_parallel_size: 1
-      use_torch_fsdp2: true
+      sequence_parallel: 1
       overlap_grad_reduce: true
-      overlap_param_gather: true
+      overlap_param_gather: false
+      use_torch_fsdp2: true
+      use_distributed_optimizer: false
+      gradient_accumulation_fusion: false
 
       # data
       mock_data: true
@@ -66,8 +69,6 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
-
-      gradient_accumulation_fusion: false
 
       enable_primus_turbo: 1
       enable_turbo_attention_float8: 0
