--- a/examples/megatron/configs/deepseek_v3-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v3-pretrain.yaml
@@ -22,7 +22,7 @@ modules:
 
       # hyber parameters
       train_iters: 50
-      micro_batch_size: 1
+      micro_batch_size: 4
       global_batch_size: 256
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
@@ -53,7 +53,7 @@ modules:
 
       # fusion
       # 20250321: need latest megatron docker image
-      moe_permute_fusion: true
+      moe_permute_fusion: false
       # fused wgrad gemm and accumulation
       gradient_accumulation_fusion: false
       # recommend set `false` in fp8
@@ -64,8 +64,8 @@ modules:
       fused_padded_mla_attention: false
 
       # Performance toggles
-      multi_latent_attention: false
-      apply_rope_fusion: true
+      #multi_latent_attention: false
+      #apply_rope_fusion: true
 
       # ckpt
       finetune: false
