--- a/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
@@ -80,5 +80,7 @@ modules:
       eval_iters: 0
 
       enable_primus_turbo: false
+      use_turbo_attention: false
+      use_turbo_grouped_mlp: false
       enable_turbo_attention_float8 : false
-      enable_turbo_gemm_float8 : true
+      enable_turbo_gemm_float8 : false
