--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "third_party/Megatron-LM"]
-	path = third_party/Megatron-LM
+	path = third_party/megatron
 	url = https://github.com/NVIDIA/Megatron-LM.git
 	branch = main
 [submodule "third_party/torchtitan"]
