--- a/examples/megatron/configs/deepseek_v3-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v3-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: ${EXP_NAME:deepseek_v2_lite-pretrain}
+exp_name: ${EXP_NAME:deepseek_v3-pretrain}
 workspace: ./output
 
 modules:
@@ -9,7 +9,7 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: ${PRIMUS_MODEL:deepseek_v2_lite}.yaml
+    model: ${PRIMUS_MODEL:deepseek_v3}.yaml
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
@@ -23,7 +23,7 @@ modules:
       # hyber parameters
       train_iters: 50
       micro_batch_size: 4
-      global_batch_size: 640
+      global_batch_size: 256
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
@@ -62,8 +62,10 @@ modules:
       moe_use_fused_router_with_aux_score: false
       # pad 192/128 for deepseek attention
       fused_padded_mla_attention: false
-      
-      multi_latent_attention: false
+
+      # Performance toggles
+      #multi_latent_attention: false
+      #apply_rope_fusion: true
 
       # ckpt
       finetune: false
@@ -78,7 +80,3 @@ modules:
       disable_last_saving: true
       ckpt_format: torch
       eval_iters: 0
-
-      enable_primus_turbo: false
-      enable_turbo_attention_float8 : false
-      enable_turbo_gemm_float8 : true
