--- a/examples/megatron/configs/qwen2.5_72B-pretrain.yaml
+++ b/examples/megatron/configs/qwen2.5_72B-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: ${EXP_NAME:llama2_7B-pretrain}
+exp_name: ${EXP_NAME:qwen2.5_72B-pretrain}
 workspace: ./output
 
 modules:
@@ -9,32 +9,30 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: llama2_7B.yaml
+    model: qwen2.5_72B.yaml
     overrides:
       # log
-      wandb_project: "Primus_DeepSeek_Pretrain"
+      wandb_project: "Primus_Qwen2.5_72B_Pretrain"
       # disable_wandb: false
       # disable_tensorboard: false
       stderr_sink_level: DEBUG
-
-      eval_iters: 0
 
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
       train_iters: 50
       micro_batch_size: 4
-      global_batch_size: 256
+      global_batch_size: 32
 
-      seq_length: 4096
-      max_position_embeddings: 4096
+      seq_length: ${SEQ_LENGTH:2048}
+      max_position_embeddings: ${MAX_POSITION_EMBEDDINGS:131072}
 
-      lr: 1.0e-5
-      min_lr: 0.0
+      lr: 1.0e-4
+      min_lr: 1.0e-5
       lr_warmup_iters: 2
-      lr_decay_iters: null
+      lr_decay_iters: 320000 
       lr_decay_style: cosine
-      weight_decay: 0.1
+      weight_decay: 1.0e-1
       adam_beta1: 0.9
       adam_beta2: 0.95
       eod_mask_loss: true
@@ -45,9 +43,14 @@ modules:
       tensor_model_parallel_size: 1
       pipeline_model_parallel_size: 1
       expert_model_parallel_size: 1
+      sequence_parallel: 1
       overlap_grad_reduce: true
-      overlap_param_gather: true
+      
+      overlap_param_gather: false
+      use_torch_fsdp2: true
+      use_distributed_optimizer: false
       gradient_accumulation_fusion: false
+      ckpt_format: torch_dist
 
       # data
       mock_data: true
@@ -66,10 +69,8 @@ modules:
       no_save_optim: null
       no_save_rng: null
       disable_last_saving: true
-      ckpt_format: torch
 
-      # use_torch_fsdp2: true
-      # use_distributed_optimizer: false
-      # overlap_param_gather: false
-      # ckpt_format: torch
-      # sequence_parallel: 1
+      # recompute
+      recompute_granularity: full # full, selective
+      recompute_method: block # uniform, block
+      recompute_num_layers: 80 # int
