--- a/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
@@ -77,8 +77,9 @@ modules:
       ckpt_format: torch
       eval_iters: 0
 
-      # use primus_turbo plugin
-      # enable_primus_turbo: true
-      # enable_turbo_attention_float8 : false
-      # enable_turbo_gemm_float8 : true
-      # use_turbo_grouped_mlp: true
+      # turbo
+      enable_primus_turbo: false
+      use_turbo_attention: false
+      use_turbo_grouped_mlp: false
+      enable_turbo_attention_float8 : false
+      enable_turbo_gemm_float8 : false
