feat(light-megatron): add LightMegatronPretrainTrainer with clean config-based integration (#136)

--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -166,7 +166,7 @@ nccl_communicator_config_path: null
 use_tp_pp_dp_mapping: false
 replication: false
 replication_jump: null # int
-replication_factor: int # int
+replication_factor: null # int
 deterministic_mode: false
 check_weight_hash_across_dp_replicas_interval: null
 
