--- a/primus/configs/modules/megatron/primus_turbo.yaml
+++ b/primus/configs/modules/megatron/primus_turbo.yaml
@@ -8,6 +8,7 @@ use_turbo_layer_norm_column_parallel_linear: false
 use_turbo_column_parallel_linear: false
 use_turbo_column_parallel_linear_torch: false
 use_turbo_grouped_mlp: false
+moe_use_fused_router_with_aux_score: false
 
 # inner features flags
 enable_turbo_attention_float8 : false
