fix: fix torchtitan llama3.1_405B pretrain

--- a/examples/torchtitan/configs/llama3.1_405B-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_405B-pretrain.yaml
@@ -18,6 +18,9 @@ modules:
       training:
         batch_size: 2
 
+      profiling:
+        enable_profiling: false
+
       optimizer:
         lr: 8e-5
 
@@ -26,3 +29,7 @@ modules:
 
       activation_checkpoint:
         mode: full
+
+      primus_turbo:
+        enable_primus_turbo: false
+        enable_attention_float8: false
