--- a/examples/megatron/configs/llama4_17B16E-pretrain.yaml
+++ b/examples/megatron/configs/llama4_17B16E-pretrain.yaml
@@ -23,7 +23,7 @@ modules:
       # hyber parameters
       train_iters: 50
       micro_batch_size: 1
-      global_batch_size: 16
+      global_batch_size: 8
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
@@ -41,7 +41,7 @@ modules:
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
       pipeline_model_parallel_size: ${PRIMUS_PP:1}
-      expert_model_parallel_size: ${PRIMUS_EP:8}
+      expert_model_parallel_size: ${PRIMUS_EP:1}
       overlap_grad_reduce: true
       overlap_param_gather: true
 
@@ -53,11 +53,11 @@ modules:
 
       # fusion
       # 20250321: need latest megatron docker image
-      moe_permute_fusion: false
+      moe_permute_fusion: false 
       # fused wgrad gemm and accumulation
       gradient_accumulation_fusion: false
       # recommend set `false` in fp8
-      moe_use_legacy_grouped_gemm: true
+      moe_use_legacy_grouped_gemm: false
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
       # pad 192/128 for deepseek attention
@@ -80,7 +80,15 @@ modules:
       eval_iters: 0
 
       enable_primus_turbo: false
-      use_turbo_attention: false
+      use_turbo_attention: true
       use_turbo_grouped_mlp: false
-      enable_turbo_attention_float8 : false
-      enable_turbo_gemm_float8 : false
+      enable_turbo_attention_float8 : true
+      enable_turbo_gemm_float8 : true
+
+      # fp8
+      # fp8: hybrid
+
+      # recompute
+      # recompute_granularity: full # full, selective
+      # recompute_method: block # uniform, block
+      # recompute_num_layers: 48 # int
