--- a/primus/configs/modules/megatron/primus_turbo.yaml
+++ b/primus/configs/modules/megatron/primus_turbo.yaml
@@ -10,6 +10,11 @@ use_turbo_column_parallel_linear_torch: false
 use_turbo_grouped_mlp: false
 moe_use_fused_router_with_aux_score: false
 
+# deepep
+use_turbo_deepep: false
+turbo_deepep_backend: 'deepep'
+turbo_deepep_num_cus: 32
+
 # inner features flags
 enable_turbo_attention_float8 : false
 enable_turbo_gemm_float8 : false
