--- a/examples/megatron/configs/llama4_17B16E-pretrain.yaml
+++ b/examples/megatron/configs/llama4_17B16E-pretrain.yaml
@@ -60,10 +60,7 @@ modules:
       moe_use_legacy_grouped_gemm: false
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
-      # pad 192/128 for deepseek attention
-      fused_padded_mla_attention: false
-
-      multi_latent_attention: false
+    
 
       # ckpt
       finetune: false
@@ -80,13 +77,13 @@ modules:
       eval_iters: 0
 
       enable_primus_turbo: false
-      use_turbo_attention: true
+      use_turbo_attention: false
       use_turbo_grouped_mlp: false
-      enable_turbo_attention_float8 : true
-      enable_turbo_gemm_float8 : true
+      enable_turbo_attention_float8 : false
+      enable_turbo_gemm_float8 : false
 
       # fp8
-      fp8: hybrid
+      # fp8: hybrid
 
       # recompute
       # recompute_granularity: full # full, selective
