--- a/examples/megatron/configs/llama3_8B-pretrain.yaml
+++ b/examples/megatron/configs/llama3_8B-pretrain.yaml
@@ -67,8 +67,6 @@ modules:
       disable_last_saving: true
       ckpt_format: torch
 
-      gradient_accumulation_fusion: false
-
-      enable_primus_turbo: false
-      enable_turbo_attention_float8 : false
-      enable_turbo_gemm_float8 : true
+      enable_primus_turbo: true
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
