--- a/examples/megatron/configs/mixtral_8x22B_v0.1-pretrain.yaml
+++ b/examples/megatron/configs/mixtral_8x22B_v0.1-pretrain.yaml
@@ -73,3 +73,7 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
+
+      enable_primus_turbo: true
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
