--- a/examples/megatron/configs/qwen2.5_72B-pretrain.yaml
+++ b/examples/megatron/configs/qwen2.5_72B-pretrain.yaml
@@ -74,3 +74,7 @@ modules:
       recompute_granularity: full # full, selective
       recompute_method: block # uniform, block
       recompute_num_layers: 80 # int
+
+      enable_primus_turbo: true
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
