--- a/examples/megatron/configs/deepseek_v3-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v3-pretrain.yaml
@@ -80,3 +80,7 @@ modules:
       disable_last_saving: true
       ckpt_format: torch
       eval_iters: 0
+
+      enable_primus_turbo: true
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
