diable gc by default; collective rocm mem at first 2 iter

--- a/primus/configs/modules/megatron/primus_megatron_module.yaml
+++ b/primus/configs/modules/megatron/primus_megatron_module.yaml
@@ -4,7 +4,13 @@ disable_tensorboard: true
 disable_wandb: true
 disable_compile_dependencies: true
 disable_profiler_activity_cpu: false
-use_rocm_mem_info: true
+# NOTE:
+# - If `use_rocm_mem_info = True`, ROCm memory information will be collected
+#   with `rocm-smi` at every iteration.
+# - If `use_rocm_mem_info = False`, memory information will only be collected
+#   at the iterations specified in `use_rocm_mem_info_iters`.
+use_rocm_mem_info: false
+use_rocm_mem_info_iters: [1,2]
 
 # continue/finetune
 auto_continue_train: false
