--- a/examples/megatron/configs/deepseek_v3-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v3-pretrain.yaml
@@ -81,6 +81,7 @@ modules:
       ckpt_format: torch
       eval_iters: 0
 
+      # Turbo
       enable_primus_turbo: true
       use_turbo_attention: true
       use_turbo_grouped_mlp: true
