--- a/examples/megatron/configs/llama3.3_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.3_70B-pretrain.yaml
@@ -71,6 +71,7 @@ modules:
       recompute_method: block # uniform, block
       recompute_num_layers: 80 # int
 
+      # Turbo
       enable_primus_turbo: true
       use_turbo_attention: true
       use_turbo_grouped_mlp: true
