--- a/examples/megatron/configs/qwen2.5_7B-pretrain.yaml
+++ b/examples/megatron/configs/qwen2.5_7B-pretrain.yaml
@@ -68,6 +68,7 @@ modules:
 
       gradient_accumulation_fusion: false
 
+      # Turbo
       enable_primus_turbo: true
       use_turbo_attention: true
       use_turbo_grouped_mlp: true
