--- a/examples/megatron/configs/llama2_7B-pretrain.yaml
+++ b/examples/megatron/configs/llama2_7B-pretrain.yaml
@@ -68,6 +68,11 @@ modules:
       disable_last_saving: true
       ckpt_format: torch
 
+      # Turbo
+      enable_primus_turbo: true
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
+
       # use_torch_fsdp2: true
       # use_distributed_optimizer: false
       # overlap_param_gather: false
