feat(zero-bubble): integrate zero-bb implementation

--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -2,6 +2,7 @@ includes:
   - ../module_base.yaml
   - primus_megatron_module.yaml
   - primus_turbo.yaml
+  - zero_bubble.yaml
 
 trainable: true
 
