--- a/primus/configs/modules/megatron/primus_megatron_module.yaml
+++ b/primus/configs/modules/megatron/primus_megatron_module.yaml
@@ -17,7 +17,7 @@ no_fp8_weight_transpose_cache: false
 decoder_pipeline_manual_split_list: null # int list
 
 # perf
-attn_warmup: false # set to true to decrease iter-1 time when using pp
+pp_warmup: false # set to true to decrease iter-1 time when using pp
 
 # tool
 dump_pp_data: false
