--- a/primus/configs/modules/megatron/primus_turbo.yaml
+++ b/primus/configs/modules/megatron/primus_turbo.yaml
@@ -14,6 +14,10 @@ use_turbo_token_dispatcher_fp8_alltoall: false
 use_turbo_deepep: false
 turbo_deepep_backend: 'deepep'
 turbo_deepep_num_cus: 32
+turbo_deepep_num_worst_tokens: 0
+
+turbo_deepep_dispatch_tuned_config: null
+turbo_deepep_combine_tuned_config: null
 
 # inner features flags
 enable_turbo_attention_float8 : false
